# travel-hack

./: .env  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml
backend/: docker-compose.yml
backend/news-service/: go.mod  go.sum
backend/news-service/docker/: Dockerfile
backend/news-service/src/: news.go
backend/nginx/: nginx.conf
backend/nginx/conf/: static.inc
backend/service/: Makefile
backend/service/conf/: settings.py
backend/service/crud/: __init__.py  region.py
backend/service/database/: __init__.py  schemas.py
backend/service/log/: __init__.py  context.py
backend/service/scripts/: create_locations.sql
backend/service/services/: api.py  dependencies.py  service_utils.py
news-service/: go.mod  go.sum
news-service/docker/: Dockerfile
news-service/src/: main.go  models.go  news.go
nginx/: nginx.conf
scripts/: create_categories.sql  create_regions.sql
service/: pre_start.py  pyproject.toml
service/crud/: __init__.py  region.py
service/database/: __init__.py  alembic.ini
service/database/alembic/versions/: 340aeabf873a_.py  6b329da67393_.py  79290e7962ff_.py  9e306dabae18_.py
service/database/models/: models.py
service/deployment/docker/: Dockerfile  Dockerfile.celeryd  Dockerfile.server
service/log/: logger.py
service/scripts/: README.md  create_tours.sql
service/services/: api.py  app.py  dependencies.py  schemas.py  service_utils.py
service/services/core/: __init__.py
service/services/core/routes/: __init__.py  planner.py  region.py
service/utils/: datetime.py  types.py
service/worker/: app.py
(+41 files in other folders)
